--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 
 <body>
-
+  <div class="container">
+    <div class="navBar">
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+  </div>
 </body>
 
 </html>
