--- a/works.html
+++ b/works.html
@@ -10,7 +10,15 @@
 
 <body>
 
+  <div class="navbar">
 
+            <a href="index.html" class="active">Home</a>
+
+     <a href="index1.html"></a>
+     <a href="index2.html"></a>
+      <a href="index3.html"></a>
+      <a href="contacts.html">Contact Us</a>
+   </div>
 
 </body>
 </html>
