added content and footer to index.html

--- a/contacts.html
+++ b/contacts.html
@@ -10,7 +10,17 @@
 
 <body>
 
+  <div class = "headersub">
 
+  <h><b>Contact Us</b></h>
+
+  </div>
+
+  <div class="navbar">
+     <a href="index.html"> Home</a>
+     <a href="blog.html">Blogs</a>
+      <a href="works.html">Works</a>
+  </div>
 
 </body>
 </html>
