--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <div class="container">
     <div class="navBar">
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blog.html">Blogs</a></li>
+        <li><a href="works.html">Works</a></li>
+        <li><a href="contacts.html">Contacts</a></li>
       </ul>
     </div>
   </div>
