--- a/works.html
+++ b/works.html
@@ -10,15 +10,23 @@
 
 <body>
 
+  <div class = "headersub">
+
+  <h><b>Works</b></h>
+
+  </div>
+
   <div class="navbar">
 
-            <a href="index.html" class="active">Home</a>
+   
 
-     <a href="index1.html"></a>
-     <a href="index2.html"></a>
-      <a href="index3.html"></a>
+     <a href="index.html"> Home</a>
+     <a href="blog.html">Blogs</a>
+      <a href="works.html">Works</a>
       <a href="contacts.html">Contact Us</a>
    </div>
 
 </body>
 </html>
+
+
