--- a/index.html
+++ b/index.html
@@ -18,7 +18,22 @@
         <li><a href="contacts.html">Contacts</a></li>
       </ul>
     </div>
+
+    <div class="content">
+      <div class="portfolio-img">
+        <img src="" alt="">
+      </div>
+      <div class="bg-img">
+        <img src="" alt="">
+      </div>
+    </div>
   </div>
+  
+  <footer>
+    <a href="">Facebook</a>
+    <a href="">Instagram</a>
+    <a href="">LinkedIn</a>
+  </footer>
 </body>
 
 </html>
