--- a/contacts.html
+++ b/contacts.html
@@ -9,18 +9,23 @@
 </head>
 
 <body>
-
-  <div class = "headersub">
-
-  <h><b>Contact Us</b></h>
-
-  </div>
-
-  <div class="navbar">
-     <a href="index.html"> Home</a>
-     <a href="blog.html">Blogs</a>
+  <div class="container">
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="blog.html">Blogs</a>
       <a href="works.html">Works</a>
-  </div>
+      <a href="contacts.html">Contacts</a>
+    </div>
 
+    <div class = "headersub">
+      <h1><b>Contact Us</b></h1>
+    </div>
+  </div>
+  
+  <footer>
+    <a href="">Facebook</a>
+    <a href="">Instagram</a>
+    <a href="">LinkedIn</a>
+  </footer>
 </body>
 </html>
