--- a/works.html
+++ b/works.html
@@ -9,22 +9,19 @@
 </head>
 
 <body>
+ <div class="container">
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="blog.html">Blogs</a>
+      <a href="works.html">Works</a>
+      <a href="contacts.html">Contacts</a>
+    </div>
 
-  <div class = "headersub">
-
-  <h><b>Works</b></h>
-
+    <div class = "headersub">
+      <h><b>Works</b></h>
+    </div>
   </div>
 
-  <div class="navbar">
-
-   
-
-     <a href="index.html"> Home</a>
-     <a href="blog.html">Blogs</a>
-      <a href="works.html">Works</a>
-      <a href="contacts.html">Contact Us</a>
-   </div>
 
 </body>
 </html>
