--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,19 @@
 </head>
 
 <body>
+  <div class="container">
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="blog.html">Blogs</a>
+      <a href="works.html">Works</a>
+      <a href="contacts.html">Contacts</a>
+    </div>
+  </div>
 
-
-
+  <footer>
+    <a href="">Facebook</a>
+    <a href="">Instagram</a>
+    <a href="">LinkedIn</a>
+  </footer>
 </body>
 </html>
