--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 
 <body>
   <div class="container">
-    <div class="navBar">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="blog.html">Blogs</a></li>
-        <li><a href="works.html">Works</a></li>
-        <li><a href="contacts.html">Contacts</a></li>
-      </ul>
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="blog.html">Blogs</a>
+      <a href="works.html">Works</a>
+      <a href="contacts.html">Contacts</a>
     </div>
 
     <div class="content">
