styled header and footer

--- a/blog.html
+++ b/blog.html
@@ -6,22 +6,45 @@
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <script src="https://kit.fontawesome.com/4c952c247a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div class="container">
     <div class="navbar">
-      <a href="index.html">Home</a>
-      <a href="blog.html">Blogs</a>
-      <a href="works.html">Works</a>
-      <a href="contacts.html">Contacts</a>
+      <ul>
+        <li>
+          <a href="contacts.html">Contact</a>
+        </li>
+        <li>
+          <a href="works.html">Works</a>
+        </li>
+        <li>
+          <a href="blog.html">Blogs</a>
+        </li>
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+      </ul>
     </div>
   </div>
 
   <footer>
-    <a href="">Facebook</a>
-    <a href="">Instagram</a>
-    <a href="">LinkedIn</a>
+    <div class="ft-container">
+      <section>
+        <!-- Facebook -->
+        <a href="https://fb.com"><i class="fab fa-facebook-f"></i></a>
+        <!-- Twitter -->
+        <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+        <!-- Instagram -->
+        <a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
+        <!-- LinkedIn -->
+        <a href="https://linkedin.com"><i class="fab fa-linkedin"></i></a>
+        <!-- Github -->
+        <a href="https://github.com"><i class="fab fa-github"></i></a>
+      </section>
+    </div>
   </footer>
 </body>
+
 </html>
