--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Portfolio</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <script src="https://kit.fontawesome.com/4c952c247a.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -29,12 +32,34 @@
     </div>
 
     <div class="content">
-      <div class="portfolio-img">
-        <img src="" alt="">
+      <div class="about-me">
+        <h3>My name is:</h3>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, quod totam nemo laboriosam vel, hic vero,
+          itaque ipsa amet tenetur quo? Totam nihil tempore eos nam saepe accusamus sapiente ipsa.
+        </p>
+        <br>
+        <p>
+          Lorem ipsum dolor sit
+          amet consectetur, adipisicing elit. Eveniet quam nulla id cupiditate temporibus consectetur magnam velit
+          fugiat. Maiores nemo, provident voluptatibus eum quisquam odio explicabo repudiandae cupiditate. Eaque,
+          consequatur.
+        </p>
       </div>
-      <div class="bg-img">
-        <img src="" alt="">
-      </div>
+
+      <h3 class="heading">View my...</h3>
+
+      <section class="links">
+        <div class="blogs">
+          <button onclick="location.href='blog.html'"><a href="blog.html">Blogs</a></button>
+        </div>
+        <div class="works">
+          <button onclick="location.href='works.html'"><a href="works.html">Works</a></button>
+        </div>
+        <div class="contact">
+          <button onclick="location.href='contacts.html'"><a href="contacts.html">Contact</a></button>
+        </div>
+      </section>
     </div>
   </div>
 
