--- a/contacts.html
+++ b/contacts.html
@@ -11,7 +11,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
 </head>
-
 <body>
   <div class="container">
     <div class="navbar">
@@ -30,10 +29,21 @@
         </li>
       </ul>
     </div>
-
-    <div class="headersub">
-      <h1><b>Contact Us</b></h1>
-    </div>
+    
+<div class = "container">
+  <form action = "action_page.php">
+    <label for =fname>First Name</label>
+    <input type = "text" id="fname" name = "firstname" placeholder="Your name..">
+    <label for="lname">Last Name </label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name.."
+      <label for="zcode">Zip Code</label>
+    <input type="number" id="zcode" name = "Zip Code" placeholder="Your Zip code.."
+      <label for "subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write any inquires here..." style="height: 200px;">
+    </textarea>
+    <input type="submit" value="Submit">
+  </form>
+</div>
     <footer>
       <div class="ft-container">
         <section>
