--- a/blog.html
+++ b/blog.html
@@ -30,6 +30,42 @@
         </li>
       </ul>
     </div>
+
+    <div class="blog-container">
+      <h3>Blogs</h3>
+      <div class="blogs">
+        <div class="day1">
+          <h3>Day 1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem eligendi nisi, odio nam beatae cupiditate id minima aliquam optio illum aspernatur consequuntur mollitia laborum animi similique laudantium dignissimos inventore. Modi.
+          </p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore, esse perspiciatis consequatur nihil at ipsa obcaecati? Dolores qui natus fugiat voluptas placeat veniam recusandae numquam eligendi officia eos, repellendus fuga.
+          </p>
+        </div>
+        <div class="day2">
+          <h3>Day 2</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reiciendis, libero distinctio delectus repellendus doloremque, ex accusamus assumenda similique vero, quia quo esse necessitatibus animi natus temporibus sed ipsa mollitia?
+          </p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore a ad commodi id dicta minima officia corrupti culpa architecto repellat dolorum tempore at blanditiis odit dolore sit eveniet, illum vel.
+            Nostrum, soluta nemo! Quod totam perspiciatis quas, magnam officiis natus id, aliquid maiores optio adipisci voluptas laboriosam sequi non omnis qui recusandae facilis expedita error labore! Ut voluptatibus saepe quas.
+          </p>
+        </div>
+        <div class="day3">
+          <h3>Day 3</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum expedita minus ut delectus reprehenderit rerum perspiciatis similique aut laudantium corrupti dolorem tempore, omnis porro officia sint tempora nulla? Sint, nihil.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium ipsam molestiae minima explicabo facilis quis similique ipsa assumenda, illo adipisci nam sed itaque officia voluptates exercitationem magnam? Aspernatur, in debitis?
+            Recusandae autem, doloribus reiciendis qui blanditiis facilis dicta asperiores minus voluptate beatae consequatur quis perferendis error quo eius rerum, exercitationem tempore. Excepturi laudantium perspiciatis odit tempora incidunt nemo deleniti labore!
+          </p>
+        </div>
+      </div>
+    </div>
+    
     <footer>
       <div class="ft-container">
         <section>
