--- a/contacts.html
+++ b/contacts.html
@@ -39,7 +39,7 @@
       <label for="zcode">Zip Code</label>
     <input type="number" id="zcode" name = "Zip Code" placeholder="Your Zip code.."
       <label for "subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write any inquires here..." style="height: 200px;">
+    <textarea id="subject" name="subject" placeholder="Write any inquires here.."style="height: 200px;">
     </textarea>
     <input type="submit" value="Submit">
   </form>
